@@ -121,8 +121,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   
   native method set1_groups_list : int ($list : string);
   
-  native method set1_curves_list : int ($list : string);
-  
   native method set_session_cache_mode : long ($mode : long);
   
   native method set_ecdh_auto : long ($state : int);
